# pyinaturalist

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  mypy.ini  noxfile.py  observations.gpx  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pre-commit.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-api-endpoint.md  new_endpoint.md  question.md
.github/PULL_REQUEST_TEMPLATE/: new-api-endpoint.md
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  automodapi.rst  code_of_conduct.md  conf.py  contributing.md  contributors.md  endpoints.md  endpoints.rst  endpoints_table.md  examples.md  examples.rst  general_usage.rst  history.md  implemented_endpoints.md  index.md  index.rst  infrastructure.rst  installation.rst  make.bat  pyinaturalist.controllers.rst  pyinaturalist.models.rst  reference.md  reference.rst  usage.rst  user_guide.md  user_guide.rst
docs/_static/: autofunction.css  collapse_params.js  collapsible_container.css  colors.css  colors.sass  style.css  table.css  versions.json
docs/_templates/: header.html  localtoc.html  module.rst_t  package.rst_t
docs/docs/: README.rst
docs/images/: inat-observation-page-annotated.odg  pyinaturalist_logo.xcf  pyinaturalist_logo_gh_preview.xcf  pyinaturalist_logo_hex.xcf  pyinaturalist_logo_stacked.xcf  pyinaturalist_logo_white.xcf  python-logo-green.xcf
docs/user_guide/: advanced.md  authentication.md  client.md  general.md  index.md  quickstart_v0.md  quickstart_v1.md
examples/: Data Visualizations - Choropleth.ipynb  Data Visualizations - Geospatial Mapping with Folium.ipynb  Data Visualizations - Matplotlib.ipynb  Data Visualizations - Regional Activity Report.ipynb  Data Visualizations - Regional Observation Stats.ipynb  Data Visualizations - Seaborn.ipynb  Data-Visualizations-Matplotlib.ipynb  Data-Visualizations-Seaborn.ipynb  Dockerfile  README.md  Tutorial 1 - Observations.ipynb  Tutorial 2 - Taxa.ipynb  Tutorial.ipynb  Tutorial_1_Observations.ipynb  Tutorial_2_Taxa.ipynb  Tutorial_3_Data_Visualizations.ipynb  docker-compose.yml  image_quality_assessment.py  observation_custom_ranking.py  observation_photo_metadata.py  observation_template.html  observations_to_gpx.py  observations_to_tsp.py  sample_data.py  sample_responses.py
examples/sample_data/: fips_to_inat_place_ids.json  observation_fields.parquet  observations.gpx  observations.tsp  photo_info.html  us_county_fips_codes.csv  us_county_place_ids.csv  us_state_fips_codes.csv  us_state_place_ids.csv  us_state_populations.csv
pyinat/: __init__.py
pyinaturalist/: __init__.py  api_docs.py  api_requests.py  auth.py  client.py  constants.py  converters.py  docstrings.py  exceptions.py  export.py  forge_utils.py  formatters.py  gpx.py  helpers.py  node_api.py  oauth_callback.py  pagination.py  paginator.py  request_params.py  response_format.py  response_utils.py  rest_api.py  session.py  tsp.py
pyinaturalist/api_docs/: __init__.py  docstrings.py  forge_utils.py  model_docs.py  params.py  templates.py
pyinaturalist/client/: __init__.py  client.py  oauth.py  oauth_callback.py  paginator.py  session.py
pyinaturalist/controllers/: __init__.py  annotation_controller.py  base.py  base_controller.py  controlled_term_controller.py  identification_controller.py  observation.py  observation_controller.py  observation_field_controller.py  observations.py  place_controller.py  places.py  project_controller.py  projects.py  search_controller.py  taxa.py  taxon_controller.py  user_controller.py  users.py
pyinaturalist/docs/: __init__.py  docstrings.py  emoji.py  font_awesome_icons.py  forge.py  forge_utils.py  model_docs.py  signatures.py  templates.py
pyinaturalist/models/: __init__.py  annotation.py  base.py  checklist.py  comment.py  conservation_status.py  controlled_term.py  field_path.py  identification.py  lazy_property.py  life_list.py  media.py  message.py  observation.py  observation_field.py  photo.py  place.py  project.py  search.py  taxon.py  taxon_meta.py  user.py
pyinaturalist/v0/: __init__.py  observation_fields.py  observations.py
pyinaturalist/v1/: __init__.py  controlled_terms.py  identifications.py  messages.py  observation_fields.py  observations.py  places.py  posts.py  projects.py  search.py  taxa.py  users.py
pyinaturalist/v2/: __init__.py  fields.py  observations.py  taxa.py
scripts/: README.md  download_sample_data.py  emoji.toml  extract_openapi_spec.js  group_emoji_by_rank.py  map_county_fips_codes.py  map_fips_codes.py  map_state_fips_codes.py  observation_crud_test.py  parse_openapi_obs_fields.py  parse_openapi_schema_fields.py  parse_openapi_spec.py  parse_openapi_v2_schema_fields.py  simulate_timeouts.py  unique_response_keys.py
scripts/specs/: openapi_enums.py  openapi_enums_v2.py  openapi_model_fields_v2.json  openapi_request_models.py  openapi_request_models_v1.py  openapi_response_models_v1.py  openapi_spec_v1.json
test/: conftest.py  sample_data.py  test_api_docs.py  test_api_requests.py  test_auth.py  test_client.py  test_compat.py  test_converters.py  test_field_path.py  test_forge_utils.py  test_formatters.py  test_helpers.py  test_models.py  test_node_api.py  test_oauth_callback.py  test_paginator.py  test_pyinaturalist.py  test_request_params.py  test_reseponse_format.py  test_response_format.py  test_response_utils.py  test_rest_api.py  test_session.py  test_user_agent.py  test_version.py
test/client/: test_client.py  test_oauth.py  test_oauth_callback.py  test_paginator.py  test_session.py
test/controllers/: test_annotation_controller.py  test_controlled_terms_controller.py  test_identification_controller.py  test_observation_controller.py  test_observation_field_controller.py  test_place_controller.py  test_project_controller.py  test_search_controller.py  test_taxon_controller.py  (+1 more)
(+187 files in other folders)
