[project]
name = 'pyinaturalist'
version = '0.20.2'
description = 'iNaturalist API client for python'
authors = [{ name = 'Jordan Cook' }]
license = 'MIT'
readme = 'README.md'
keywords = [
    'inaturalist',
    'biodiversity',
    'conservation',
    'citizen-science',
    'community-science',
    'api',
    'api-client',
    'data-model',
    'requests',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Typing :: Typed',
]
requires-python = '>=3.8'
dependencies = [
    'attrs>=21.2',
    'keyring>=22.3',
    'platformdirs>=2.6',
    'python-dateutil>=2.0',
    'requests>=2.25',
    'requests-cache>=1.2',
    'requests-ratelimiter>=0.5.1',
    'rich>=10.9',
]

[project.urls]
homepage = 'https://github.com/pyinat/pyinaturalist'
repository = 'https://github.com/pyinat/pyinaturalist'
documentation = 'https://pyinaturalist.readthedocs.io'

[project.optional-dependencies]
# Optional dependencies
all = [
    'filelock>2.0',
    'ujson>5.0',
]

[dependency-groups]
# Dev dependencies
dev = [
    'coverage>=7.2',
    'nox~=2024.4',
    'pre-commit~=3.5',
    'pretty-errors>=1.2',
    'pytest~=8.2',
    'pytest-asyncio>=0.21',
    'pytest-cov>=3.0',
    'pytest-xdist>=2.2',
    'requests-mock~=1.8',
    'sphinx-autobuild>=2021.3',
]

# Documentation dependencies for Readthedocs builds
docs = [
    'furo~=2024.8',
    'ipython~=8.12',
    'linkify-it-py~=2.0',
    'matplotlib>=3.7',
    'myst-parser>=1.0',
    'nbsphinx~=0.9',
    'pillow>=10.1',
    'sphinx~=6.2',
    'sphinx-automodapi~=0.18',
    'sphinx-autodoc-typehints==1.20',
    'sphinx-copybutton>=0.5',
    'sphinx-design>=0.5',
    'sphinxcontrib-apidoc~=0.5',
    'sphinxext-opengraph>=0.9',
]

[build-system]
requires = ['hatchling>=1.0.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages =  ['pyinaturalist', 'pyinat']
force-include = {'README.md' = 'pyinaturalist/README.md'}

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.run]
branch = true
source = ['pyinaturalist', 'pyinat']
omit = [
    'pyinaturalist/docs/model_docs.py',
    'pyinaturalist/docs/forge.py',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
]

[tool.isort]
profile = 'black'
line_length = 100
skip_gitignore = true
known_first_party = ['test']

[tool.mypy]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ['pyinaturalist']

[tool.pytest.ini_options]
markers = [
    'enable_client_session: Enable all ClientSession features: caching, rate-limiting, etc.',
]
asyncio_default_fixture_loop_scope = 'module'

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py37'
exclude = ['examples/', 'test/sample_data/']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F']

[tool.ruff.lint.isort]
known-first-party = ['test']

# Wrap lines to 100 chars, but don't error on unwrappable lines until 120 chars
[tool.ruff.lint.pycodestyle]
max-line-length = 120
