[project]
name = 'pyinaturalist'
version = '0.21.1'
description = 'iNaturalist API client for python'
authors = [{ name = 'Jordan Cook' }]
license = 'MIT'
readme = 'README.md'
keywords = [
    'inaturalist',
    'biodiversity',
    'conservation',
    'citizen-science',
    'community-science',
    'api',
    'api-client',
    'data-model',
    'requests',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Typing :: Typed',
]
requires-python = '>=3.10'
dependencies = [
    'attrs>=21.2',
    'keyring>=22.3',
    'platformdirs>=2.6',
    'python-dateutil>=2.0',
    'requests>=2.25',
    'requests-cache>=1.2',
    'requests-ratelimiter>=0.6,<0.9',
    'rich>=10.9',
]

[project.urls]
homepage = 'https://github.com/pyinat/pyinaturalist'
repository = 'https://github.com/pyinat/pyinaturalist'
documentation = 'https://pyinaturalist.readthedocs.io'

[project.optional-dependencies]
# Optional dependencies
all = [
    'filelock>2.0',
    'ujson>5.0',
]

[dependency-groups]
# Dev dependencies
dev = [
    'dotenv>=0.9',
    'nox~=2025.5',
    'prek>=0.2',
    'pretty-errors>=1.2',
    'pytest>=8.0',
    'pytest-asyncio>=0.21',
    'pytest-cov>=5.0',
    'pytest-xdist>=2.2',
    'requests-mock~=1.12',
    'sphinx-autobuild>=2021.3',
    'starlette<0.28',  # For compatibility with sphinx-autobuild
]

# Documentation dependencies for Readthedocs builds
docs = [
    'furo~=2025.7; python_version>="3.11"',
    'ipython~=8.12; python_version>="3.11"',
    'linkify-it-py~=2.0; python_version>="3.11"',
    'matplotlib>=3.7; python_version>="3.11"',
    'myst-parser>=4.0; python_version>="3.11"',
    'myst-nb~=1.2; python_version>="3.11"',
    'pillow>=10.1; python_version>="3.11"',
    'sphinx~=8.2; python_version>="3.11"',
    'sphinx-automodapi~=0.20; python_version>="3.11"',
    'sphinx-autodoc-typehints~=3.2; python_version>="3.11"',
    'sphinx-copybutton>=0.5; python_version>="3.11"',
    'sphinx-design>=0.6; python_version>="3.11"',
    'sphinxcontrib-apidoc~=0.6; python_version>="3.11"',
    'sphinxext-opengraph>=0.9; python_version>="3.11"',
]

[build-system]
requires = ['hatchling>=1.0.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages =  ['pyinaturalist', 'pyinat']
force-include = {'README.md' = 'pyinaturalist/README.md'}

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.run]
branch = true
source = ['pyinaturalist', 'pyinat']
omit = [
    'pyinaturalist/docs/model_docs.py',
    'pyinaturalist/docs/forge.py',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
]

[tool.mypy]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ['pyinaturalist']

[tool.pytest.ini_options]
markers = [
    'enable_client_session: Enable all ClientSession features: caching, rate-limiting, etc.',
]
asyncio_default_fixture_loop_scope = 'module'

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
exclude = ['examples/', 'scripts/specs/', 'scripts/parse_openapi_spec.py', 'test/sample_data/']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'E', 'F', 'I']

[tool.ruff.lint.isort]
known-first-party = ['test']

# Wrap lines to 100 chars, but don't error on unwrappable lines until 120 chars
[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.typos]
files.extend-exclude = [
    'CONTRIBUTORS.md',
    'examples/',
    'scripts/specs/',
    'test/sample_data/',
]

[tool.typos.default.extend-words]
Oficial = 'Oficial'
ND = 'ND'
