[metadata]
description = Python client for the iNaturalist APIs
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
keywords = pyinaturalist, iNaturalist
license = MIT license
license_files = LICENSE
python_requires='>=3.6',
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# Tell mypy to ignore external libraries without type annotations
[mypy]
ignore_missing_imports = True
