[metadata]
description = Python client for the iNaturalist APIs
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
keywords = pyinaturalist, iNaturalist
license = MIT license
license_files = LICENSE
python_requires = '>=3.6',
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[flake8]
max_line_length = 120
exclude = __pycache__,.tox,build,dist,test,venv
# Defer these rules to black:
ignore =
    E225  # missing whitespace around operator
    E501  # line too long
    W503  # line break before binary operator
    W504  # line break after  binary operator

# Show 7 lines of context in debugger
[ipdb]
context = 7

# Tell mypy to ignore external libraries without type annotations
[mypy]
ignore_missing_imports = True
